tests/invalid-syntax/64854_missing_parentheses_in_while_loop/missing_parentheses_in_while_loop.agu
-- Author: 64854, Diogo Almeida

let i : Int = 0;
let count : Int = 0;
-- mising the ()
while i < 10 do
    set count = count + i;
    set i = i + 1